--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -17,6 +17,10 @@
   justify-self: center;
 }
 
+.score-table {
+  max-width: 100%;
+}
+
 .table-custom-first {
   background-repeat: no-repeat;
   background-color: #fff3cd;
